--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "browser-sync": "^2.26.7",
     "del": "^5.1.0",
     "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
     "gulp-clean-css": "^4.2.0",
     "gulp-if": "^3.0.0",
     "gulp-sass": "^4.0.2",
@@ -32,6 +33,10 @@
     "@fortawesome/fontawesome-free": "^5.12.0",
     "animate.css": "^3.7.2",
     "bootstrap": "^4.4.1",
-    "normalize.css": "^8.0.1"
+    "jquery": "^3.4.1",
+    "magnific-popup": "^1.1.0",
+    "normalize.css": "^8.0.1",
+    "owl.carousel": "^2.3.4",
+    "wow.js": "^1.2.2"
   }
 }
